<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hawesome.edsdemo.Tab2Activity">
    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></android.support.v4.view.ViewPager>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/tabL1"
            style="@style/TabLinear">
            <ImageView
                android:id="@+id/ivTab1"
                style="@style/TabImg"
                android:src="@drawable/ui_1"/>
            <TextView
                style="@style/TabText"
                android:text="@string/tab1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tabL2"
            style="@style/TabLinear">
            <ImageView
                android:id="@+id/ivTab2"
                style="@style/TabImg"
                android:src="@drawable/params_1"/>
            <TextView
                style="@style/TabText"
                android:text="@string/tab2"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tabL3"
            style="@style/TabLinear">
            <ImageView
                android:id="@+id/ivTab3"
                style="@style/TabImg"
                android:src="@drawable/onoff_1"/>
            <TextView
                style="@style/TabText"
                android:text="@string/tab3"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tabL4"
            style="@style/TabLinear">
            <ImageView
                android:id="@+id/ivTab4"
                style="@style/TabImg"
                android:src="@drawable/history_1"/>
            <TextView
                style="@style/TabText"
                android:text="@string/tab4"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tabL5"
            style="@style/TabLinear">
            <ImageView
                android:id="@+id/ivTab5"
                style="@style/TabImg"
                android:src="@drawable/tag_1"/>
            <TextView
                style="@style/TabText"
                android:text="@string/tab5"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
